# rrt_exploration

./: CMakeLists.txt  README.md  package.xml
action/: ExploreNextPoint.action
config/: global_rrt_detector.yaml  local_rrt_detector.yaml
include/: functions.h
launch/: simple.launch.py  single.launch.py  three_robots.launch  three_robots.launch.py
scripts/: assigner.py  avoid_holes_utils.py  filter.py  frontier_avoid_holes.py  frontier_opencv_detector.py  frontier_utils.py  functions.py  getfrontier.py  robot.py
src/: functions.cpp  global_rrt_detector.cpp  local_rrt_detector.cpp  mtrand.cpp
